--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Generate your own art simply by adding your prompt and choosing a style" />
+  <meta charset="utf-8">
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#000000">
+  <meta name="description" content="Generate your own art simply by adding your prompt and choosing a style">
   <title>PicAIsso</title>
 </head>
 
